force-app/main/default/objects/Assignment_Setting__mdt/fields/IsAdhoc__c.field-meta.xml
<CustomField>
    <fullName>IsAdhoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAdhoc</label>
    <type>Checkbox</type>
</CustomField>