force-app/main/default/objects/Assignment_Setting__mdt/fields/IsAutoGenerated__c.field-meta.xml
<CustomField>
    <fullName>IsAutoGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAutoGenerated</label>
    <type>Checkbox</type>
</CustomField>